Документ - создание связи: поле с выбранным элементом: fix
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1896 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/lecm-association-search.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/lecm-association-search.css
@@ -1,3 +1,7 @@
+div.object-finder div.search-picker + div.current-values {
+    width: 100%;
+}
+
 div.object-finder div.search-picker div.picker-items {
 	border: 1px solid #aaa;
 	height: 150px;
