--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1876,11 +1876,21 @@ div.association-auto-complete-selected-item-even {
     padding: 3px 5px;
 }
 div.association-auto-complete-selected-item > span > a,
-div.association-auto-complete-selected-item-even > span > a {
+div.association-auto-complete-selected-item-even > span > a,
+div.association-auto-complete-selected-item > span.not-person,
+div.association-auto-complete-selected-item-even > span.not-person {
     max-width: 400px;
     display: inline-block;
     white-space: nowrap;
     overflow-x: hidden;
+}
+div.association-auto-complete-selected-item > span.not-person,
+div.association-auto-complete-selected-item-even > span.not-person {
+    max-width: 420px;
+}
+div.association-auto-complete-selected-item > span.not-person.width100,
+div.association-auto-complete-selected-item-even > span.not-person.width100 {
+    max-width: 100%;
 }
 div.association-auto-complete-selected-item:last-child,
 div.association-auto-complete-selected-item-even:last-child {
