ALF-669: Договор - история: правки дизайна
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1914 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
@@ -22,8 +22,12 @@
 .datagrid .onActionMakePrimary a {
     background-image: url("../../../images/lecm-base/components/base/alf_base_osnovnaya_16.png");
 }
-.datagrid input.formsCheckBox,
-.datagrid input.formsCheckBox + label.checkbox {
+.datagrid .show-archive-cb-div {
+    padding: 5px;
+    text-align: right;
+}
+.datagrid .show-archive-cb-div input.formsCheckBox,
+.datagrid .show-archive-cb-div input.formsCheckBox + label.checkbox {
     vertical-align: middle;
 }
 
