ALF-679: выбор сотрудника: fix
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1922 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1970,6 +1970,9 @@ span.person a {
 	padding-left: 20px;
     background: url(../../components/images/filetypes/generic-user-16.png) no-repeat 0 2px;
 }
+span.person a h3 {
+    display: inline;
+}
 
 .yui-skin-lecmTheme .datagrid span.person,
 .yui-skin-lecmTheme .datagrid span.container,
