--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -2105,3 +2105,7 @@ div[id$=date-cntrl] - селектор для всех div с id, заканчи
     text-decoration: underline;
 }
 
+.set-bordered-panel-body {
+    overflow: hidden;
+}
+
