--- a/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
+++ b/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
@@ -95,6 +95,10 @@ ul, li {
     background-color: #00B0EB !important;
 }
 
+.ijab-contactview-item:hover {
+    background-color:#bbe6f3;
+}
+
 /*!* ijab UI v2.0.0pre * http://www.ijab.im/ * * Copyright(c) 2009 Hidden * * Date:* Revision:*/
 .ijab-Reference-standard {
     height: 5px;
