--- a/lecm-documents/share/src/main/webapp/css/components/document-attachments.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-attachments.css
@@ -1,22 +1,12 @@
 .attachments-set .attachment-category {
-	padding-left: 1.5em;
+	padding-left: 1em;
+    font: 14px Arial;
 }
 
 .attachments-set .attachment-category .category-title {
 	padding-top: 0.5em;
-	font-family: Arial;
-	font-size: 14px;
-	font-weight: normal;
-	font-style: normal;
 	text-decoration: none;
-	color: #333333;
-	border-bottom: 1px solid #CCCCCC;
+	color: #333;
+	border-bottom: 1px solid #ccc;
 }
 
-.attachments-set .attachment-category .attachment {
-	padding-left: 1em;
-	font-family: Arial;
-	font-size: 14px;
-	font-weight: normal;
-	font-style: normal;
-}
