--- a/lecm-documents/share/src/main/webapp/css/components/document-connections-list.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-connections-list.css
@@ -1,5 +1,5 @@
 .connections-list {
-	padding-left: 2em;
+	margin-left: 10px;
 }
 .connections-list .connections-title {
 	width: 100%;
@@ -20,7 +20,6 @@
 
 .connections-list .connections-title  .connections-add {
 	text-align: right;
-	padding-right: 1em;
 }
 
 .connections-list tr.border-bottom td {
