--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -154,16 +154,16 @@ a:hover {
     height : 22px;
     line-height: 22px;
     position: absolute;
-    top: 50%;
-    left: 50%;
+    top: 85%;
+    left: 81%;
     margin: -11px 0 0 -11px;
     border-radius: 9px;
     text-align: center;
     vertical-align: middle;
     font-size: 16px;
     font-weight: bold;
-    background-color: green;
-    color: yellow;
+    /*background-color: green;*/
+    color: #00B0EB;
     cursor: pointer;
 }
 
