Заготовки для AРM "Договорной деятельности"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2050 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-menu.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-menu.css
@@ -1,3 +1,14 @@
-#lecm-menu #menu-buttons #menu-buttons-contractsBtn span.first-child {
+#lecm-menu #menu-buttons #menu-buttons-mainBtn span.first-child {
 	background: url('/share/res/images/lecm-contracts/alf_contracts_32.png') no-repeat 4px 4px;
+}
+#lecm-menu #menu-buttons-listBtn span.first-child {
+    background: url('/share/res/images/lecm-contracts/alf_contracts_32.png') no-repeat 4px 4px;
+}
+
+#lecm-menu #menu-buttons-documentsBtn span.first-child {
+    background: url('/share/res/images/lecm-contracts/alf_contracts_32.png') no-repeat 4px 4px;
+}
+
+#lecm-menu #menu-buttons-reportsBtn span.first-child {
+    background: url('/share/res/images/lecm-contracts/alf_contracts_32.png') no-repeat 4px 4px;
 }
