--- a/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
+++ b/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
@@ -10,6 +10,10 @@
 	background: url('/share/res/images/lecm-statemachine-editor/deploy.png') no-repeat 4px 4px;
 }
 
+#lecm-menu .statemachine-menu #menu-buttons-default-machine-deploy span.first-child {
+    background: url('/share/res/images/lecm-statemachine-editor/deploy.png') no-repeat 4px 4px;
+}
+
 #lecm-menu .statemachine-menu #menu-buttons-machine-export span.first-child {
 	background: url('../../res/images/lecm-orgstructure/alf_orgstructure_podrazdel_32.png') no-repeat 4px 4px;
 }
