[~] стили для фильтров по статусам
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2097 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-filter.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-filter.css
@@ -33,7 +33,7 @@ h2.thin {
  }
 
 .white-filter-panel {
-    background-color: #ffffff;
+    background-color: #F2F2F2;
     border: 1px solid #000000;
 }
 
