ALF-792 Всплывающая кнопка редактирования на дашлете "Основные сведения"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2143 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/dashlet-components.css
+++ b/lecm-documents/share/src/main/webapp/css/dashlet-components.css
@@ -32,6 +32,19 @@
     padding-right: 13px;
 }
 
+.body.scrollableList.dashlet-body{
+    position: relative;
+}
+
+.body.scrollableList.dashlet-body:hover .edit{
+    background: url("/share/res/components/profile/images/edit.png") no-repeat scroll 2px 2px transparent;
+    height: 20px;
+    position: absolute;
+    right: 15px;
+    top: 5px;
+    width: 20px;
+}
+
 .dashlet .lecm-dashlet-actions-right {
 	float: right;
 }
