[~] изменение в стилях для фильтров
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2168 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-filter.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-filter.css
@@ -19,11 +19,12 @@ h2.thin {
 }
 
 .contracts-filter-panel .text-cropped {
-    margin: 5px;
     display: block;
     overflow: hidden;
     text-overflow: ellipsis;
+    -o-text-overflow: ellipsis;
     white-space: nowrap;
+    -moz-binding: url('/examples/text-overflow.xml#ellipsis');
 }
 
 .contracts-filter-panel .filterBlock{
