[~]подправлены стили дашлета "Договора"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2216 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-dashlet.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-dashlet.css
@@ -22,3 +22,16 @@
     margin: 0;
     padding: 0;
 }
+
+.contracts .title {
+    padding: 5px 9px 5px 9px;
+    overflow: hidden;
+}
+
+.dashlet .datagrid {
+    padding-top: 0;
+}
+
+.dashlet .scrollableList {
+    padding: 0;
+}
