[~]Дашлет сводная информация. Подправлены стили. Изменено отображение информации в дашлете
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2246 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-activity.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-activity.css
@@ -9,4 +9,4 @@
 .dashlet.contracts .body .row {
     line-height: 16px;
     margin: 10px 0;
-}                                                                                                                       `
+}
