--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/daterange.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/daterange.css
@@ -1,5 +1,7 @@
 .yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-start-date,
-.yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-end-date {
+.yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-unlimited,
+.yui-skin-lecmTheme .yui-panel .lecm-daterange-control .datarange-end-date,
+.yui-skin-lecmTheme .lecm-daterange-control .datarange-start-date {
 	float: left;
 }
 
