--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
@@ -3,13 +3,20 @@
     position: relative;
 }
 .yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.set div.yui-g div.yui-u {
-    margin-right: 0;
     margin-left: 0;
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
 }
-.yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.form-field > label {
+.yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.form-field > label,
+.yui-skin-lecmTheme .yui-panel div.form-field div.viewmode-field span.viewmode-label {
     width: 190px;
     padding-right: 10px;
     text-align: right;
+    margin: 0;
+}
+.yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.form-field div.viewmode-field span.viewmode-value {
+    padding-left: 0;
 }
 .yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.form-field input[type=text],
 .yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.form-field div.selectone-control select,
