--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-summary.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-summary.css
@@ -11,3 +11,42 @@
     float: right;
     overflow: auto;
 }
+
+/***********Workflow tasks dashlet *************/
+
+.WORKFLOWTASKTYPE_NA {
+    display: none;
+}
+.WORKFLOWTASKTYPE_OVERDUE {
+    color: #FF0000;
+}
+.WORKFLOWTASKTYPE_SOON {
+    color: #CC6600;
+}
+
+.workflow-date {
+    font-size: 12px;
+    font-weight: bold;
+    color: #666666;
+}
+
+.workflow-task-main-text {
+    padding-top: 5px;
+}
+
+.workflow-task-title {
+    font-weight: bold;
+}
+
+.dashlet .my-task {
+    padding-right: 40px;
+    padding-bottom: 5px;
+    padding-top: 6px;
+    padding-left: 15px;
+}
+
+.dashlet .workflow-task-main-text {
+    padding-left: 9px;
+}
+
+/***********end Workflow tasks dashlet *************/
