[~] контрол для атачей бизнес-процесса [~] кастомизация страницы workflow-details
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2293 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1868,6 +1868,11 @@ div.current-values,
 .yui-skin-lecmTheme div.form-field div.yui-ac .autocomplete-input {
     float: left;
 }
+#lecm-package-items-span div.current-values
+{
+    float: none;
+    width: 100%;
+}
 
 div.currentValueDisplay {
     width: 100%;
